--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row"
+  <div class="row">
     <h3 class="text-center">Contact Us</h3>
  
-  <div class="col-md-4 col-md-offset-4">
-    <div class="well">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="well">
         <%= form_for "/contacts" do |f| %>
           <div class="form-group">
             <%= f.label :name %>
