--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,3 +67,8 @@ h1,h2,h3 {
   padding-top: 50px;
   padding-bottom: 100px;
 }
+
+// Removing the Devise alert notices
+.alert-notice {
+  display: none;
+}
