--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,6 +68,10 @@ h1,h2,h3 {
   padding-bottom: 100px;
 }
 
+.home-signup-links {
+  margin-top: 30px;
+}
+
 // Removing the Devise alert notices
 .alert-notice {
   display: none;
