--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,21 +5,19 @@
         <% if params[:plan] == '2' %>
           <h1>Pro Account</h1>
           <p>Sign up for $10/month and get access to the community and contact information!</p>
+      </div> 
+            <div class="well">
+              <h2 class="text-center">Sign Up</h2>
+                <%= render "pro_form" %>
+            </div>
         <% else %>
-          <h1>Basic Account</h1>
-          <p>Sign up for free and get basic access to the community.</p>
+            <h1>Basic Account</h1>
+            <p>Sign up for free and get basic access to the community.</p>
+              <div class="well">
+                <%= render "basic_form" %>
+              </div>
         <% end %>
-      </div>
-        <div class="well">
-          <h2>Sign up</h2>
-          <% if params[:plan] == '2' %>
-            <%= render "pro_form" %>
-          <% else %>
-            <%= render "basic_form" %>
-          <% end %>
-          
           <%= render "devise/shared/links" %>
-      </div>
     </div>
   </div>
 </div>
