--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,11 +68,18 @@ h1,h2,h3 {
   padding-bottom: 100px;
 }
 
-.home-signup-links {
-  margin-top: 30px;
+.alert-notice, .alert-alert {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.3);
+  border-color: rgba(255, 255, 255, 0.3);
+  margin-top: -14px;
 }
 
-// Removing the Devise alert notices
-.alert-notice {
-  display: none;
+.flash-container {
+  position: absolute;
+  width: 100%;
+}
+
+.home-signup-links {
+  margin-top: 30px;
 }
