--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -29,3 +29,14 @@
     background-color: #5bc0de;
     border-color: #46b8da;
 }
+
+// For displaying avatars on index
+.user-index-avatar {
+    height: 128px;
+    width: 128px;
+    border-radius: 50%;
+}
+
+.well.white-bg {
+    background-color: white;
+}
