--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,27 @@
-This is the list of all users
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <ul class="list-unstyled">
+        <% @users.each do |user| %>
+          <% if user.profile %>
+          <div class="well row <%= cycle('white-bg', '') %>">
+            <div class="col-sm-4 text-center">
+              <li>
+              <% if user.profile.avatar %>
+                <%= link_to user do %>
+                <%= image_tag user.profile.avatar.url, class: 'user-index-avatar' %>
+                <% end %>
+              <% end %> 
+              </li>
+            </div>
+              <%= link_to user do %>
+              <h2><%= user.profile.first_name %><%= user.profile.last_name %></h2>
+              <% end %>
+              <p><%= user.profile.job_title %></p>
+          </div>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
